# uv-fastapi-devcontainer

./: pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
