[project]
name = "default"
version = "0.0.1"
description = ""

authors = [{ name = "japeru01", email = "japeru01@gmail.com" }]
maintainers = [{ name = "japeru01", email = "japeru01@gmail.com" }]

requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "fastapi[standard]>=0.115.6",
]

[tool.uv]
dev-dependencies = [
    "mkdocs-material>=9.5.49",
    "pre-commit>=4.0.1",
    "pyright>=1.1.391",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
]
